globus-gsi-callback (5.9-1+gt6.@distro@) @distro@; urgency=low

  * Updates for OpenSSL 1.1.0

 -- Globus Toolkit <support@globus.org>  Tue, 16 Aug 2016 14:25:49 -0400

globus-gsi-callback (5.8-1+gt6.@distro@) @distro@; urgency=low

  * GT-608: Remove dead code from gsi callback

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 09:05:51 -0400

globus-gsi-callback (5.7-1+gt6.@distro@) @distro@; urgency=low

  * GT-599: Race condition in globus_gsi_callback_get_SSL_callback_data_index() and globus_gsi_callback_get_X509_STORE_callback_data_index()

 -- Globus Toolkit <support@globus.org>  Thu, 28 May 2015 07:12:32 -0400

globus-gsi-callback (5.6-1+gt6.@distro@) @distro@; urgency=low

  * Doxygen markup fixes
  * Include more manpages for API
  * Fix dependency version
  * Fix typos and clarify some documentation

 -- Globus Toolkit <support@globus.org>  Wed, 24 Sep 2014 10:12:08 -0400

globus-gsi-callback (5.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-gsi-callback (5.4-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-gsi-callback (5.4-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-gsi-callback (5.4-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:38 -0400

globus-gsi-callback (5.3-1+gt6.@distro@) @distro@; urgency=low

  * Use package-named config.h

 -- Globus Toolkit <support@globus.org>  Tue, 27 May 2014 09:36:46 -0400

globus-gsi-callback (5.2-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:28 -0400

globus-gsi-callback (5.1-3+gt6.@distro@) @distro@; urgency=low
