@@ -1,3 +1,9 @@
+globus-gsi-proxy-core (8.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix path length constraint handling
+
+ -- Globus Toolkit <support@globus.org>  Tue, 30 Aug 2016 09:02:48 -0400
+
 globus-gsi-proxy-core (8.1-1+gt6.@distro@) @distro@; urgency=low
 
   * Fix conditional for 1.0.1
